<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_weight="0.01"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/vTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/mediumBlue"
        android:textSize="15dp" />

    <LinearLayout
        android:id="@+id/ContactLL"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_weight="0.02"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/devByTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/developedBy"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/developer"
            android:textColor="@color/mediumBlue"
            android:textSize="25dp"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/emailTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contactEmailTitle"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/emailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contactEmail"
            android:textColor="@color/mediumBlue"
            android:textSize="15dp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/webTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contactWebTitle"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/webTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contactWebLink"
            android:textColor="@color/mediumBlue"
            android:textSize="15dp"
            android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>